--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,5 @@ language: python
 python:
   - "2.7"
   - "2.6"
-install: "pip install nltk --use-mirrors"
+install: "pip install nltk --use-mirrors; python -c 'import nltk;nltk.download(\"all\")'"
 script: nosetests
