--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,6 @@ install:
   - python -c 'import nltk; nltk.download("punkt")'
   - python -c 'import nltk; nltk.download("maxent_treebank_pos_tagger")'
 script: nosetests -v
+branches:
+  only:
+    - master
