--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,7 @@ python:
   - "2.7"
 install:
   - pip install nltk --use-mirrors
-  - python -c 'import nltk; nltk.download("punkt")'
-  - python -c 'import nltk; nltk.download("maxent_treebank_pos_tagger")'
+  - python -m nltk.downloader punkt maxent_treebank_pos_tagger
 script: nosetests -v
 branches:
   only:
